[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/Enemies/Turret.gd" type="Script" id=1]
[ext_resource path="res://assets/Sprites/temp_turret.png" type="Texture" id=2]

[sub_resource type="CapsuleShape2D" id=1]
height = 1.89516

[sub_resource type="CircleShape2D" id=2]

[node name="Turret" type="KinematicBody2D" groups=[
"enemy",
]]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AgroRadius" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AgroRadius"]
scale = Vector2( 30, 30 )
shape = SubResource( 2 )

[node name="FireRate" type="Timer" parent="."]
[connection signal="body_entered" from="AgroRadius" to="." method="_on_AgroRadius_body_entered"]
[connection signal="body_exited" from="AgroRadius" to="." method="_on_AgroRadius_body_exited"]
[connection signal="timeout" from="FireRate" to="." method="_on_FireRate_timeout"]
